# DGui

./: CMakeLists.txt  abstract_slider.h  boundered_rect.cpp  boundered_rect.h  button.cpp  button.h  curve.h  dgui.cpp  dgui.h  dgui_config.h  directional_layout.cpp  directional_layout.h  event.h  screen_widget.cpp  screen_widget.h  slider.cpp  slider.h  style.cpp  style.h  text_box.cpp  text_box.h  text_field.h  widget.cpp  widget.h  widget_manager.cpp  widget_manager.h  window.h
abstract_slider/: abstract_slider.cpp  thumb.cpp
curve/: curve.cpp  vector2d.cpp  vector2d.h
json/: CMakeLists.txt  json.c  json.h  pretty_json.c  pretty_json.h  test_json.c
window/: title_bar.cpp  window.cpp
